--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     name="viewport"
     content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="title" content="Conan by JFrog - the C / C++ Package Manager for Developers">
-    <meta name="description" content="Conan is an open source, decentralized and multi-platform package manager that allows you to create and share all your native binaries.">
+    <meta name="title" content="Conan.io - the Open Source C/C++ Package Manager for Developers">
+    <meta name="description" content="Conan is an open source, decentralized and multi-platform package manager for C/C++ that allows you to create and share all your native binaries.">
     <link
     rel="shortcut icon"
     type="image/png"
@@ -161,12 +161,12 @@
           <div class="col-12 text-center diagram-wrapper">
             <img
               src="img/diagram.svg"
-              alt="Conan, the C/C++ Package Manager"
+              alt="Conan C/C++ Package Manager Decentralized Architecture"
               class="d-none d-sm-inline"
             />
             <img
               src="img/conan-io-diagram-mobile.png"
-              alt="Conan, the C/C++ Package Manager"
+              alt="Conan C/C++ Package Manager Decentralized Architecture"
               class="d-sm-none"
             />
           </div>
@@ -318,12 +318,11 @@
               <div class="content one-advantage-content">
                 <p class="text">
                   <a href="https://conan.io/center/" target="_blank" class="text-link">
-                  ConanCenter is the central repository where you can search and
+                  ConanCenter </a> is the central repository where you can search and
                   discover all of the available open source Conan packages
                   created by the community. It includes recipe and configuration
                   information, and makes it easy to see package metadata in the
                   UI.
-                  </a>
                 </p>
                 <a
                   href="https://conan.io/center/"
