--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -7,8 +7,8 @@
   name="viewport"
   content="width=device-width, initial-scale=1, shrink-to-fit=no"
   />
-  <meta name="title" content="Conan by JFrog - the C / C++ Package Manager for Developers">
-  <meta name="description" content="Conan is an open source, decentralized and multi-platform package manager that allows you to create and share all your native binaries.">
+  <meta name="title" content="Conan.io - the Open Source C/C++ Package Manager for Developers">
+    <meta name="description" content="Conan is an open source, decentralized and multi-platform package manager for C/C++ that allows you to create and share all your native binaries.">
   <link
   rel="shortcut icon"
   type="image/png"
@@ -144,16 +144,16 @@ The look and feel of the Service is copyright ©2018 JFrog. All rights reserved.
     </div>
 </section>
 
-<!-- SIGN UP -->
-<section class="sign-up py-5 bg-blue white text-center" id="signUp">
+ <!-- SIGN UP -->
+ <section class="sign-up py-5 bg-blue white text-center" id="signUp">
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <h2 class="white d-flex justify-content-center" id="signUpTitle">
-          <div class="position-relative"><img src="img/letter.svg" alt="Sign Up"
-              class="position-absolute letter"></div>
+        <div class="h2 white d-flex justify-content-center" id="signUpTitle">
+          <div class="position-relative"><img data-src="img/letter.svg" alt="Sign Up"
+              class="position-absolute letter lazy"></div>
           <span>SIGN ME UP FOR RELEASE UPDATES</span>
-        </h2>
+        </div>
         <div class="mktoFormWrapper">
           <!-- FOOTER FORM HERE -->
           <script src="https://leap.jfrog.com/js/forms2/js/forms2.min.js"></script>
