removed target="_blank" from all conan center links

--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
                 Blog
               </a>
               <a href="https://conan.io/center/"
-                 class="btn bg-blue white"
-                 target="_blank">
+                 class="btn bg-blue white">
                 <img src="img/small-search.svg"
                      alt="Search">
                  Conan-Center
@@ -317,7 +316,7 @@
               </h3>
               <div class="content one-advantage-content">
                 <p class="text">
-                  <a href="https://conan.io/center/" target="_blank" class="text-link">
+                  <a href="https://conan.io/center/" class="text-link">
                   ConanCenter </a> is the central repository where you can search and
                   discover all of the available open source Conan packages
                   created by the community. It includes recipe and configuration
