--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -86,8 +86,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             Blog
           </a>
           <a href="https://conan.io/center/"
-              class="btn bg-blue white"
-              target="_blank">
+              class="btn bg-blue white">
             <img src="img/small-search.svg"
                   alt="Search">
               Conan-Center
