--- a/downloads.html
+++ b/downloads.html
@@ -103,8 +103,7 @@
                 Blog
               </a>
               <a href="https://conan.io/center/"
-                 class="btn bg-blue white"
-                 target="_blank">
+                 class="btn bg-blue white">
                 <img src="img/small-search.svg"
                      alt="Search">
                  Conan-Center
