--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               class="d-none d-sm-inline"
             />
             <img
-              src="img/conan-io-diagram-mobile.png"
+              src="img/diagram-mobile.svg"
               alt="Conan C/C++ Package Manager Decentralized Architecture"
               class="d-sm-none"
             />
