--- a/index.html
+++ b/index.html
@@ -470,16 +470,15 @@
       </form>
       <div class="row subscribe-form-container">
         <div class="col-12 text-center">
-          <h4 id="signUpHeading">Sign up for release updates</h4>
+          <!--<h4 id="signUpHeading">Sign up for release updates</h4>
           <div class="mktoFormWrapper">
-            <!-- FOOTER FORM HERE -->
             <script src="https://leap.jfrog.com/js/forms2/js/forms2.min.js"></script>
             <form id="mktoForm_1479">
             </form>
             <script>
               MktoForms2.loadForm("https://leap.jfrog.com", "256-FNZ-187", 1479);
             </script>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
