some gulp modifications

--- a/src/downloads.html
+++ b/src/downloads.html
@@ -11,7 +11,7 @@
   <link href="favicon.png" rel="shortcut icon" type="image/png" />
   <link href="https://conan.io/downloads.html" hreflang="en" rel="alternate" />
   <title>C/C++ Open Source Package Manager</title>
-  
+
   <link rel="stylesheet" href="css/all.css">
 
   <script>(function (w, d, s, l, i) { w[l] = w[l] || []; w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' }); var f = d.getElementsByTagName(s)[0], j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f); })(window, document, 'script', 'dataLayer', 'GTM-WK44ZFM');</script>
@@ -27,11 +27,21 @@
             class="d-block d-lg-none hamburger hamburger--collapse text-right" type="button"><span
               class="hamburger-box"><span class="hamburger-inner"></span></span></button></div>
         <div class="col-lg-6 text-right d-flex align-items-center justify-content-end">
-          <nav class="header-nav align-items-center d-lg-flex" id="headerNav"><a class="btn bg-bright-gray"
-              href="https://github.com/conan-io/conan" rel="nofollow" rel="nofollow"><img alt="Github"
-                src="img/small-github.svg"></a><a class="btn bg-bright-gray black" href="https://docs.conan.io/">Docs
-            </a><a class="btn bg-bright-gray black" href="https://blog.conan.io/">Blog </a><a class="btn bg-blue white"
-              href="https://conan.io/center/"><img alt="Search" src="img/small-search.svg">&nbsp;Conan-Center </a></nav>
+          <nav class="header-nav align-items-center d-lg-flex" id="headerNav">
+            <a href="https://conan.io/center/" class="btn bg-blue white">
+              <img src="img/small-search.svg" alt="Search">
+              Conan-Center
+            </a>
+            <a href="https://docs.conan.io/" class="btn bg-bright-gray black">
+                Docs
+            </a>
+            <a href="https://blog.conan.io/" class="btn bg-bright-gray black">
+                Blog
+            </a>
+            <a href="https://github.com/conan-io/conan" rel="nofollow" class="btn bg-bright-gray">
+                <img src="img/small-github.svg" alt="Github">
+            </a>
+          </nav>
         </div>
       </div>
     </div>
@@ -328,7 +338,7 @@
       </div>
     </div>
   </footer>
-  
+
   <script src="js/all.js"></script>
 
 </body>
