debian jfrog-artifactory-cpp > jfrog-artifactory-cpp-ce

--- a/src/downloads.html
+++ b/src/downloads.html
@@ -189,7 +189,7 @@
                   </div>
                   <div class="package-wrapper package-copy-plus-download d-flex flex-no-wrap position-relative">
                     <textarea class="position-absolute" cols="1" id="artiDebian"
-                      rows="1">wget -qO - https://releases.jfrog.io/artifactory/api/gpg/key/public | apt-key add -;echo "deb https://releases.jfrog.io/artifactory/artifactory-debs{distribution} main" | sudo tee -a /etc/apt/sources.list;# To determine your distribution, run lsb_release -c or cat /etc/os-release# Example:echo "deb https://releases.jfrog.io/artifactory/artifactory-debs xenial main" | sudo tee -a /etc/apt/sources.list;apt-get update;sudo apt-get install jfrog-artifactory-cpp </textarea>
+                      rows="1">wget -qO - https://releases.jfrog.io/artifactory/api/gpg/key/public | apt-key add -;echo "deb https://releases.jfrog.io/artifactory/artifactory-debs{distribution} main" | sudo tee -a /etc/apt/sources.list;# To determine your distribution, run lsb_release -c or cat /etc/os-release# Example:echo "deb https://releases.jfrog.io/artifactory/artifactory-debs xenial main" | sudo tee -a /etc/apt/sources.list;apt-get update;sudo apt-get install jfrog-artifactory-cpp-ce </textarea>
                     <div class="cn-box small"><img alt="debian" class="lazy"
                         data-src="img/downloads/debian-small-pack.svg"></div>
                     <div class="cn-box cn-main cn-dropdown">
