Vectorize Header Logo

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
 
                 <!-- LOGO -->
                 <a href="index.html" class="col-10 col-lg-4 d-block">
-                    <img src="img/logo-conan.png" class="header-logo" alt="Conan C++ Package Manager">
+                    <img src="img/logo-conan.svg" class="header-logo" alt="Conan C++ Package Manager">
                 </a>
 
                 <!-- HAMBURGER -->
