--- a/src/downloads.html
+++ b/src/downloads.html
@@ -22,7 +22,7 @@
   <header id="masthead">
     <div class="container">
       <div class="row d-flex justify-content-between"><a class="col-10 col-lg-4 d-block" href="index.html"><img
-            alt="Conan C++ Package Manager" class="header-logo" src="img/logo-conan.png"></a>
+            alt="Conan C++ Package Manager" class="header-logo" src="img/logo-conan.svg"></a>
         <div class="col-2 d-flex d-lg-none align-items-center justify-content-end"> <button
             class="d-block d-lg-none hamburger hamburger--collapse text-right" type="button"><span
               class="hamburger-box"><span class="hamburger-inner"></span></span></button></div>
