--- a/src/terms-conditions.html
+++ b/src/terms-conditions.html
@@ -53,7 +53,7 @@
         <div class="row d-flex justify-content-between">
           <a href="index.html" class="col-10 col-lg-4 d-block"
             ><img
-              src="img/logo-conan.png"
+              src="img/logo-conan.svg"
               class="header-logo"
               alt="Conan C++ Package Manager"
           /></a>
