images optimiziation automation

--- a/src/index.html
+++ b/src/index.html
@@ -118,8 +118,8 @@
                 <div class="col-12 text-center diagram-wrapper">
                     <img src="img/diagram.svg" alt="Conan C/C++ Package Manager Decentralized Architecture"
                         class="d-none d-sm-inline" />
-                    <img src="img/diagram-mobile.svg" alt="Conan C/C++ Package Manager Decentralized Architecture"
-                        class="d-sm-none" />
+                    <img src="img/diagram-mobile.png" alt="Conan C/C++ Package Manager Decentralized Architecture"
+                        class="d-sm-none img-fluid" />
                 </div>
             </div>
         </div>
