added canonical tag to downloads.html

--- a/src/downloads.html
+++ b/src/downloads.html
@@ -12,6 +12,8 @@
   <link href="https://conan.io/downloads.html" hreflang="en" rel="alternate" />
   <title>C/C++ Open Source Package Manager</title>
 
+  <link rel="canonical" href="https://conan.io/downloads.html" />
+
   <link rel="stylesheet" href="css/all.css">
 
   <script>(function (w, d, s, l, i) { w[l] = w[l] || []; w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' }); var f = d.getElementsByTagName(s)[0], j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f); })(window, document, 'script', 'dataLayer', 'GTM-WK44ZFM');</script>
