removed contact us form

--- a/src/index.html
+++ b/src/index.html
@@ -759,29 +759,8 @@
         </div>
     </section>
 
-    <!-- CONTACT US -->
-    <section class="contact-us position-relative py-0 py-md-5" id="contactUs">
-        <img data-src="img/hero-bg.svg" class="lazy position-absolute contact-bg d-none d-xl-inline"
-            alt="Conan C++ Package Manager" />
-        <div class="container form-container pt-2 pb-5">
-            <div class="row">
-                <div class="col-12 text-center py-4 title-mail">
-                    <h6 class="h2 font-weight-light" id="contactUsTitle">CONTACT US</h6>
-                    <a href="mailto:info@conan.io" class="font-weight-bold mt-n2 d-block" id="contactUsEmail">
-                        info@conan.io
-                    </a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-
-                    <script src="https://leap.jfrog.com/js/forms2/js/forms2.min.js"></script>
-                    <form id="mktoForm_2684"></form>
-
-                </div>
-            </div>
-        </div>
-    </section>
+    <!-- CONTACT US REMOVED -->
+    
 
     <!-- FOOTER -->
     <footer id="siteFooter" class="py-5 bg-bright-gray">
