#132 updae compliance email link

--- a/src/privacy-policy.html
+++ b/src/privacy-policy.html
@@ -431,7 +431,7 @@
             electronic storage and we cannot guarantee that unauthorized access
             or use of your information will never occur. Further information is
             available at
-            <a href="mailto:Compliance@jfrog.com">privacy</a><a href="mailto:Compliance@jfrog.com">@jfrog.com</a>.
+            <a href="mailto:Compliance@jfrog.com">privacy@jfrog.com</a>.
             <h3 class="text-capitalize pt-4" id="nr7">
               7. International Data Transfer
             </h3>
