Revert "Shuffle Our Users"
This reverts commit a857fa0847ab427e04ee5cbdfaa39aea81f23579.

--- a/src/index.html
+++ b/src/index.html
@@ -303,12 +303,46 @@
         <div class="container">
 
             <div class="users-image-stock d-none" id="usersStock">
-                <img src="img/brands/company_35.png" alt="Electrolux">
-                <img src="img/brands/company_36.png" alt="Khomp">
-                <img src="img/brands/company_37.png" alt="Tanker">
-                <img src="img/brands/company_38.png" alt="Bitprim">
-                <img src="img/brands/company_39.png" alt="Rheinmetall">
-                <img src="img/brands/company_40.png" alt="Bose">
+                <img src="https://via.placeholder.com/160?text=1" alt="">
+                <img src="https://via.placeholder.com/160?text=2" alt="">
+                <img src="https://via.placeholder.com/160?text=3" alt="">
+                <img src="https://via.placeholder.com/160?text=4" alt="">
+                <img src="https://via.placeholder.com/160?text=5" alt="">
+                <img src="https://via.placeholder.com/160?text=6" alt="">
+                <img src="https://via.placeholder.com/160?text=7" alt="">
+                <img src="https://via.placeholder.com/160?text=8" alt="">
+                <img src="https://via.placeholder.com/160?text=9" alt="">
+                <img src="https://via.placeholder.com/160?text=10" alt="">
+                <img src="https://via.placeholder.com/160?text=11" alt="">
+                <img src="https://via.placeholder.com/160?text=12" alt="">
+                <img src="https://via.placeholder.com/160?text=13" alt="">
+                <img src="https://via.placeholder.com/160?text=14" alt="">
+                <img src="https://via.placeholder.com/160?text=15" alt="">
+                <img src="https://via.placeholder.com/160?text=16" alt="">
+                <img src="https://via.placeholder.com/160?text=17" alt="">
+                <img src="https://via.placeholder.com/160?text=18" alt="">
+                <img src="https://via.placeholder.com/160?text=19" alt="">
+                <img src="https://via.placeholder.com/160?text=20" alt="">
+                <img src="https://via.placeholder.com/160?text=21" alt="">
+                <img src="https://via.placeholder.com/160?text=22" alt="">
+                <img src="https://via.placeholder.com/160?text=23" alt="">
+                <img src="https://via.placeholder.com/160?text=24" alt="">
+                <img src="https://via.placeholder.com/160?text=25" alt="">
+                <img src="https://via.placeholder.com/160?text=26" alt="">
+                <img src="https://via.placeholder.com/160?text=27" alt="">
+                <img src="https://via.placeholder.com/160?text=28" alt="">
+                <img src="https://via.placeholder.com/160?text=29" alt="">
+                <img src="https://via.placeholder.com/160?text=30" alt="">
+                <img src="https://via.placeholder.com/160?text=31" alt="">
+                <img src="https://via.placeholder.com/160?text=32" alt="">
+                <img src="https://via.placeholder.com/160?text=33" alt="">
+                <img src="https://via.placeholder.com/160?text=34" alt="">
+                <img src="https://via.placeholder.com/160?text=35" alt="">
+                <img src="https://via.placeholder.com/160?text=36" alt="">
+                <img src="https://via.placeholder.com/160?text=37" alt="">
+                <img src="https://via.placeholder.com/160?text=38" alt="">
+                <img src="https://via.placeholder.com/160?text=39" alt="">
+                <img src="https://via.placeholder.com/160?text=40" alt="">
             </div>
 
             <div class="row">
@@ -319,34 +353,49 @@
 
             <div class="users-flex d-flex">
                 <div class="user-box inner">
-                    <img class="" src="img/brands/company_25.png" alt="Microblink" />
+                    <img class="" src="img/brands/company_29.png" alt="Cient" />
                 </div>
                 <div class="user-box inner">
-                    <img class="" src="img/brands/company_26.png" alt="Keysight" />
+                    <img class="" src="img/brands/company_27.png" alt="Cient" />
                 </div>
                 <div class="user-box inner">
-                    <img class="" src="img/brands/company_27.png" alt="Huawei" />
+                    <img class="" src="img/brands/company_28.png" alt="Cient" />
                 </div>
                 <div class="user-box inner">
-                    <img class="" src="img/brands/company_28.png" alt="Pix4D" />
+                    <img class="" src="img/brands/company_26.png" alt="Cient" />
                 </div>
                 <div class="user-box inner">
-                    <img class="" src="img/brands/company_29.png" alt="Poco" />
+                    <img class="" src="img/brands/company_25.png" alt="Cient" />
                 </div>
                 <div class="user-box inner">
-                    <img class="" src="img/brands/company_30.png" alt="Arxan" />
+                    <img class="" src="img/brands/company_32.png" alt="Cient" />
                 </div>
                 <div class="user-box inner">
-                    <img class="" src="img/brands/company_31.png" alt="Plex" />
+                    <img class="" src="img/brands/company_33.png" alt="Cient" />
                 </div>
                 <div class="user-box inner">
-                    <img class="" src="img/brands/company_32.png" alt="Mercedes Benz" />
+                    <img class="" src="img/brands/company_34.png" alt="Cient" />
                 </div>
                 <div class="user-box inner">
-                    <img class="" src="img/brands/company_33.png" alt="Melexis" />
+                    <img class="" src="img/brands/company_30.png" alt="Cient" />
                 </div>
                 <div class="user-box inner">
-                    <img class="" src="img/brands/company_34.png" alt="OpenROV" />
+                    <img class="" src="img/brands/company_31.png" alt="Cient" />
+                </div>
+                <div class="user-box inner">
+                    <img class="" src="img/brands/company_39.png" alt="Cient" />
+                </div>
+                <div class="user-box inner">
+                    <img class="" src="img/brands/company_38.png" alt="Cient" />
+                </div>
+                <div class="user-box inner">
+                    <img class="" src="img/brands/company_36.png" alt="Cient" />
+                </div>
+                <div class="user-box inner">
+                    <img class="" src="img/brands/company_37.png" alt="Cient" />
+                </div>
+                <div class="user-box inner">
+                    <img class="" src="img/brands/company_35.png" alt="Cient" />
                 </div>
             </div>
         </div>
