Add onetrust footer item (empty a.ot-sdk-show-settings) Fix font size for content size

--- a/src/index.html
+++ b/src/index.html
@@ -788,12 +788,9 @@
                             <div class="col-sm-3">
                                 <h4 class="blue mb-1">Legal</h4>
                                 <ul>
-                                    <li><a href="privacy-policy.html">
-                                            Privacy Policy
-                                        </a></li>
-                                    <li><a href="terms-conditions.html">
-                                            Terms
-                                        </a></li>
+                                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                                    <li><a href="terms-conditions.html">Terms</a></li>
+                                    <li><a href="#" class="ot-sdk-show-settings"></a></li>
                                 </ul>
                             </div>
                             <div class="col-sm-3">
