--- a/src/terms-conditions.html
+++ b/src/terms-conditions.html
@@ -318,6 +318,7 @@
                   <ul>
                     <li><a href="privacy-policy.html">Privacy Policy </a></li>
                     <li><a href="terms-conditions.html">Terms </a></li>
+                    <li><a href="#" class="ot-sdk-show-settings"></a></li>
                   </ul>
                 </div>
                 <div class="col-sm-3">
