Add banner top for all templates

--- a/src/terms-conditions.html
+++ b/src/terms-conditions.html
@@ -48,6 +48,13 @@
         style="display: none; visibility: hidden;"
       ></iframe
     ></noscript>
+
+    <div id="top_banner" class="position-relative">
+      <a href="https://github.com/conan-io/website/tree/develop/src" target="_blank"></a>
+      <img id="close_banner" class="position-absolute" src="img/close.svg" alt="close">
+    </div>
+
+
     <header id="masthead">
       <div class="container">
         <div class="row d-flex justify-content-between">
@@ -341,5 +348,10 @@
         </div>
       </div>
     </footer>
+    <script type="text/javascript">
+      document.getElementById('close_banner').onclick = function () {
+        document.getElementById('top_banner').style.display = 'none';
+      }
+    </script>
   </body>
 </html>
