--- a/src/index.html
+++ b/src/index.html
@@ -309,6 +309,7 @@
 
         <div class="users-image-stock d-none" id="usersStock">
             <img src="img/brands/company_40.png" alt="Bose">
+            <img src="img/brands/company_41.png" alt="TomTom">
         </div>
 
         <div class="row">
