--- a/src/index.html
+++ b/src/index.html
@@ -799,6 +799,7 @@
                                 <li><a href="terms-conditions.html">
                                     Terms
                                 </a></li>
+                                <li><a href="terms-conditions.html">Terms </a></li>
                             </ul>
                         </div>
                         <div class="col-sm-3">
