removed blank space

--- a/src/index.html
+++ b/src/index.html
@@ -773,7 +773,7 @@
                                     Download
                                 </a></li>
                                 <li><a href="https://conan.io/center/">
-                                    &nbsp;Conan-Center
+                                    Conan-Center
                                 </a></li>
                                 <li><a href="https://github.com/conan-io/conan" rel="nofollow">
                                     GitHub
