Training styling changes

--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
 </header>
 
 <!-- HERO -->
-<section id="hero" class="blue-gradient-bg py-5 position-relative">
+<section id="hero" class="blue-gradient-bg position-relative">
     <img src="img/hero-bg.svg" class="position-absolute hero-bg" alt="Conan C++ Package Manager" />
     <div class="container py-5">
         <div class="row">
@@ -105,7 +105,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="training row justify-content-center mt-5">
+                    <div class="training row justify-content-center">
                         <div class="training-video embed-responsive embed-responsive-16by9">
                             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/MJw7F5HeuiI?rel=0" allowfullscreen></iframe>
                         </div>
