--- a/src/index.html
+++ b/src/index.html
@@ -106,9 +106,10 @@
                         </div>
                     </div>
                     <div class="training row justify-content-center">
-                        <div class="training-video embed-responsive embed-responsive-16by9">
+                        <!-- <div class="training-video embed-responsive embed-responsive-16by9">
                             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/MJw7F5HeuiI?rel=0" allowfullscreen></iframe>
-                        </div>
+                        </div> -->
+                        <div id="ytPlayer" class="training-video"></div>
                         <div class="training-text white text-left ml-3">
                             <span>Learn Conan C / C++ </span>
                             <br>
