Change styles to better show anchors

--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,7 @@
                                 </a>
                             </div>
                             <hr class="dotted green">
-                            <span class="xs-text">Hands-on free training</span>
+                            <span class="xs-text">Join our hands-on free training</span>
                         </div>
                     </div>
                 </div>
