--- a/src/index.html
+++ b/src/index.html
@@ -330,6 +330,7 @@
         <div class="users-image-stock d-none" id="usersStock">
             <img src="img/brands/company_40.png" alt="Bose">
             <img src="img/brands/company_41.png" alt="TomTom">
+            <img src="img/brands/company_42.png" alt="NNS">
         </div>
 
         <div class="row">
