--- a/src/tribe.html
+++ b/src/tribe.html
@@ -277,7 +277,8 @@
              <div class="content-right pl-3 d-flex flex-column justify-content-between">
                <div class="content-top">
                  <h3 id="conanTribeMemberModalTitle" class="tmModal_Name"> <!-- Name --> </h3>
-                 <p class="mb-5 tmModal_LongDescription"> <!--Description--> </p>
+                 <p class="company py-2 d-none"> <!--Company--> </p>
+                 <p class="mb-4 tmModal_LongDescription"> <!--Description--> </p>
                </div>
                <div class="content-bottom d-flex align-items-center flex-column flex-md-row">
                 <ul
