--- a/src/index.html
+++ b/src/index.html
@@ -394,7 +394,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <div class="h2 white text-center mt-2 mb-4">OUR USERS' VOICE</div>
+                <div class="h2 white text-center mt-2 mb-4">CONAN 2.0 TRIBE</div>
             </div>
         </div>
 
