--- a/src/index.html
+++ b/src/index.html
@@ -136,6 +136,23 @@
     </div>
 </section>
 
+<section id="homeBanner" class="home-banner bg-dark" style="background-image: url(./img/banner-bg.png)">
+    <div class="container">
+        <div class="banner-wrapper d-flex flex-column flex-lg-row align-items-center py-4 py-lg-2 h-100 justify-content-center">
+            <img src="./img/banner-tribe.png" alt="Meet The Tribe">
+            <div class="mx-3 m content mw-100 h-100 d-flex flex-nowrap flex-lg-wrap flex-column align-items-center align-items-lg-start justify-content-center text-white">
+                <h2 class="text-uppercase text-center text-lg-left">Meet the CONAN 2.0&nbsp;TRIBE</h2>
+                <p class="mb-0 pb-3 text-center text-lg-left">
+                    A group of more than 70 Conan expert users and contributors helping to define the next Conan 2.0 major version.
+                </p>
+            </div>
+            <a href="/tribe.html" class="green-cta text-white">
+                Learn more
+            </a>
+        </div>
+    </div>
+</section>
+
 <!-- DIAGRAM -->
 <section class="diagram py-3" id="diagram">
     <div class="container py-3">
