--- a/src/downloads.html
+++ b/src/downloads.html
@@ -34,6 +34,9 @@
               <img src="img/small-search.svg" alt="Search">
               Conan-Center
             </a>
+            <a href="faq.html" class="btn bg-bright-gray black">
+                FAQ
+            </a>
             <a href="https://docs.conan.io/" class="btn bg-bright-gray black">
                 Docs
             </a>
