Add the FAQ button to all pages

--- a/src/privacy-policy.html
+++ b/src/privacy-policy.html
@@ -79,6 +79,9 @@
                 <img src="img/small-search.svg" alt="Search">
                 Conan-Center
               </a>
+              <a href="faq.html" class="btn bg-bright-gray black">
+                FAQ
+              </a>
               <a href="https://docs.conan.io/" class="btn bg-bright-gray black">
                   Docs
               </a>
