--- a/src/terms-conditions.html
+++ b/src/terms-conditions.html
@@ -79,6 +79,9 @@
                 <img src="img/small-search.svg" alt="Search">
                 Conan-Center
               </a>
+              <a href="faq.html" class="btn bg-bright-gray black">
+                FAQ
+              </a>
               <a href="https://docs.conan.io/" class="btn bg-bright-gray black">
                   Docs
               </a>
